<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yelp_frag_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/yelp_fusion" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="19dp"
            android:text="@string/yelp_intro"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/bebas_nue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="19dp"
            android:text="@string/yelp_link"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/bebas_nue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="19dp"
            android:text="@string/yelp_paragraph2"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/bebas_nue"/>

    </LinearLayout>
</ScrollView>